# ChangeLog for media-libs/libcaca
# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/libcaca/ChangeLog,v 1.34 2006/10/17 16:57:57 aballier Exp $

  17 Oct 2006; Alexis Ballier <aballier@gentoo.org>
  libcaca-0.99_beta4.ebuild, libcaca-0.99_beta5.ebuild,
  libcaca-0.99_beta7.ebuild:
  Updating homepage and src_uri since it has moved

*libcaca-0.99_beta7 (15 Oct 2006)

  15 Oct 2006; Hanno Boeck <hanno@gentoo.org> +libcaca-0.99_beta7.ebuild,
  +files/libcaca-0.99_beta7-gcc41.diff:
  Version bump.

*libcaca-0.99_beta5 (27 Sep 2006)

  27 Sep 2006; Hanno Boeck <hanno@gentoo.org> +libcaca-0.99_beta5.ebuild:
  Version bump.

*libcaca-0.99_beta4 (13 Sep 2006)

  13 Sep 2006; Diego Pettenò <flameeyes@gentoo.org>
  +files/libcaca-0.99_beta4-deoptimise.patch, +libcaca-0.99_beta4.ebuild:
  Add 0.99 version.

  04 Sep 2006; Joshua Kinard <kumba@gentoo.org> libcaca-0.9-r2.ebuild:
  Marked stable on mips.

  27 Jul 2006; Diego Pettenò <flameeyes@gentoo.org> libcaca-0.9-r1.ebuild,
  libcaca-0.9-r2.ebuild:
  Fix dependency on slang 1, see bug #141947.

  09 Jul 2006; Diego Pettenò <flameeyes@gentoo.org> libcaca-0.9-r1.ebuild,
  libcaca-0.9-r2.ebuild:
  Pinpoint virtual/x11 version to less than 7.

  27 Jun 2006; Guy Martin <gmsoft@gentoo.org> libcaca-0.9-r2.ebuild:
  Stable on hppa.

  17 May 2006; Mark Loeser <halcy0n@gentoo.org> libcaca-0.9-r2.ebuild:
  Stable on x86; bug #132838

  14 May 2006; Markus Rothe <corsair@gentoo.org> libcaca-0.9-r2.ebuild:
  Stable on ppc64; bug #132838

  11 May 2006; Thomas Cort <tcort@gentoo.org> libcaca-0.9-r2.ebuild:
  Stable on alpha and amd64 wrt Bug #132838.

  11 May 2006; Jason Wever <weeve@gentoo.org> libcaca-0.9-r2.ebuild:
  Stable on SPARC wrt bug #132838.

  11 May 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  libcaca-0.9-r2.ebuild:
  ppc stable, bug #132838

  08 Apr 2006; Diego Pettenò <flameeyes@gentoo.org> libcaca-0.9-r2.ebuild:
  Add ~x86-fbsd keyword.
