@@ -1,28 +1,34 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-MD5 bc0631e6abe992ff01c07476f0b98d3b ChangeLog 2442
-RMD160 a1aaad8f7d39d4a1f4c7bbad71cefb83f8e2b6f4 ChangeLog 2442
-SHA256 23fef7d37a300f1f44c4c28e8a46e25589cd5686b3ea848f0e7172cb9ff3d5c7 ChangeLog 2442
+DIST libmusepack-1.0.3.tar.bz2 226099
+DIST libmusepack-1.1.tar.bz2 293731
+EBUILD libmusepack-1.0.3.ebuild 522 RMD160 858badf3ba66a02999b5ea15235694614971aed6 SHA1 a76b9bd2bb06d6e46e98882eed2a7739486d9b1e SHA256 b08f83e7b4437c754d3a2b6ea1f3567b971de2bbf629666980f24887be8b3d7b
+MD5 b8bdafd7ed2fec71208e074b354b3691 libmusepack-1.0.3.ebuild 522
+RMD160 858badf3ba66a02999b5ea15235694614971aed6 libmusepack-1.0.3.ebuild 522
+SHA256 b08f83e7b4437c754d3a2b6ea1f3567b971de2bbf629666980f24887be8b3d7b libmusepack-1.0.3.ebuild 522
+EBUILD libmusepack-1.1-r1.ebuild 641 RMD160 b680c43ed4d296c028c6d0dbadc63a6eb803b0d4 SHA1 0e6572058da77500076c14e5a869ce3a7ba62574 SHA256 bdaf1d5583f52156ea61cc5a508d12572f33e0133419394229b2abc2d4fc078b
+MD5 051d5b94842242437f1c1940cf1f7af5 libmusepack-1.1-r1.ebuild 641
+RMD160 b680c43ed4d296c028c6d0dbadc63a6eb803b0d4 libmusepack-1.1-r1.ebuild 641
+SHA256 bdaf1d5583f52156ea61cc5a508d12572f33e0133419394229b2abc2d4fc078b libmusepack-1.1-r1.ebuild 641
+MISC ChangeLog 2606 RMD160 4679a19c8fc6ee4be2f9cb839e2e81c4f50a7a37 SHA1 5afeb98aecb26d7dfd243a3ba7558f666efe3f4c SHA256 38c74866ede3921c36a3f6afef4842425372cdebb3bcc966c3043e5655ef96af
+MD5 97bd330e95112265f3ec8266afd967a6 ChangeLog 2606
+RMD160 4679a19c8fc6ee4be2f9cb839e2e81c4f50a7a37 ChangeLog 2606
+SHA256 38c74866ede3921c36a3f6afef4842425372cdebb3bcc966c3043e5655ef96af ChangeLog 2606
+MISC metadata.xml 158 RMD160 6842e2189a50bd8a98e84802c38180ac1421c00e SHA1 703cea5a2109d41f7c87993c1f01d418a4c85174 SHA256 dfb5b47e6836db39fb187301dfcff1c2605e91d13d21db160806a563d8c75f9b
+MD5 a1eaeb2ae801daeb712c90c060e922dc metadata.xml 158
+RMD160 6842e2189a50bd8a98e84802c38180ac1421c00e metadata.xml 158
+SHA256 dfb5b47e6836db39fb187301dfcff1c2605e91d13d21db160806a563d8c75f9b metadata.xml 158
 MD5 51b8f6a366771c5e79ab355b15ba9b9c files/digest-libmusepack-1.0.3 70
 RMD160 f568d088fb92719d3bfea9c419e01770857b09fc files/digest-libmusepack-1.0.3 70
 SHA256 b72859b80e5ac450226779c31a74eed8207cb9f605edf8cc404965b2f01550d4 files/digest-libmusepack-1.0.3 70
 MD5 d4e0b9147a15f75a6530a8c7a6d45194 files/digest-libmusepack-1.1-r1 68
 RMD160 648246adb9d2723d9c638e482a3310c3e12e286c files/digest-libmusepack-1.1-r1 68
 SHA256 1c8493d21cf9f9c794731022d23726e85336321e130cf47875dbe4c410aea742 files/digest-libmusepack-1.1-r1 68
-MD5 b8bdafd7ed2fec71208e074b354b3691 libmusepack-1.0.3.ebuild 522
-RMD160 858badf3ba66a02999b5ea15235694614971aed6 libmusepack-1.0.3.ebuild 522
-SHA256 b08f83e7b4437c754d3a2b6ea1f3567b971de2bbf629666980f24887be8b3d7b libmusepack-1.0.3.ebuild 522
-MD5 509c7d926754bf15b4c221b7eb28d233 libmusepack-1.1-r1.ebuild 592
-RMD160 5de8b8cbe7bcce9107e7092ecfb177389e901b8c libmusepack-1.1-r1.ebuild 592
-SHA256 6aef27478f7346064b1b97b3736d7ef42e2fd5b80335b75b635cec8060b167d3 libmusepack-1.1-r1.ebuild 592
-MD5 a1eaeb2ae801daeb712c90c060e922dc metadata.xml 158
-RMD160 6842e2189a50bd8a98e84802c38180ac1421c00e metadata.xml 158
-SHA256 dfb5b47e6836db39fb187301dfcff1c2605e91d13d21db160806a563d8c75f9b metadata.xml 158
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v1.4.2.1 (GNU/Linux)
+Version: GnuPG v1.4.5 (GNU/Linux)
 
-iD8DBQFEDF8FAiZjviIA2XgRAvaBAJ45c4/RU0gQ5YTvQP8KsAgZf7hJ0ACgh8SO
-xfO4U2Gj9ctMOzid6Dw2ngE=
-=tEDi
+iD8DBQFFQqdTAiZjviIA2XgRAmrJAJ4trXyyRsFSgAfxa5DiA/CkXDzHrgCgqYT0
+mkcWnGkoXXOAmcektfwQnm0=
+=wvyq
 -----END PGP SIGNATURE-----
