@@ -1,6 +1,12 @@
 # ChangeLog for media-libs/libcaca
 # Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/libcaca/ChangeLog,v 1.34 2006/10/17 16:57:57 aballier Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/libcaca/ChangeLog,v 1.35 2006/10/28 00:38:30 flameeyes Exp $
+
+  28 Oct 2006; Diego Pettenò <flameeyes@gentoo.org> -libcaca-0.9-r1.ebuild,
+  libcaca-0.9-r2.ebuild, -libcaca-0.99_beta4.ebuild,
+  -libcaca-0.99_beta5.ebuild, libcaca-0.99_beta7.ebuild:
+  Cleanup old versions, add version dependencies for autoconf/automake. Thanks
+  to Patrick Lauer in bug #153055.
 
   17 Oct 2006; Alexis Ballier <aballier@gentoo.org>
   libcaca-0.99_beta4.ebuild, libcaca-0.99_beta5.ebuild,
